// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > props > :content[slot] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-content-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Avatar > props > :content[string/function] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    content
  </span>
</div>
`;

exports[`Avatar > props > :content[string/function] 2`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="src"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="image"
              >
                <path
                  d="M3 21H20L9 10L3 16V21Z"
                  fill="transparent"
                  id="fill1"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  fill="transparent"
                  id="fill2"
                  r="2"
                />
                <path
                  d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  id="stroke2"
                  r="2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </span>
</div>
`;

exports[`Avatar > props > :default[slot] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-default-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Avatar > props > :default[string/function] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    default
  </span>
</div>
`;

exports[`Avatar > props > :default[string/function] 2`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="src"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="image"
              >
                <path
                  d="M3 21H20L9 10L3 16V21Z"
                  fill="transparent"
                  id="fill1"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  fill="transparent"
                  id="fill2"
                  r="2"
                />
                <path
                  d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  id="stroke2"
                  r="2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </span>
</div>
`;

exports[`Avatar > props > :gap:avatarWidth 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span
    style="transform: scale(0.92);"
  >
    content
  </span>
</div>
`;

exports[`Avatar > props > :shape[circle/round] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar > props > :shape[circle/round] 2`] = `
<div
  class="t-avatar t-avatar--round"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`AvatarGroup > props > :cascading[left-up/right-up] 1`] = `
<div
  class="t-avatar-group t-avatar--offset-left"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup > props > :cascading[left-up/right-up] 2`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup > props > :collapseAvatar[slot] 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="image"
              >
                <path
                  d="M3 21H20L9 10L3 16V21Z"
                  fill="transparent"
                  id="fill1"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  fill="transparent"
                  id="fill2"
                  r="2"
                />
                <path
                  d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  id="stroke2"
                  r="2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      
      <span
        class="custom-collapse-node"
      >
        +2
      </span>
      
      
    </span>
  </div>
  
  
</div>
`;

exports[`AvatarGroup > props > :collapseAvatar[string/function] 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="image"
              >
                <path
                  d="M3 21H20L9 10L3 16V21Z"
                  fill="transparent"
                  id="fill1"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  fill="transparent"
                  id="fill2"
                  r="2"
                />
                <path
                  d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  id="stroke2"
                  r="2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
</div>
`;

exports[`AvatarGroup > props > :collapseAvatar[string/function] 2`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="image"
              >
                <path
                  d="M3 21H20L9 10L3 16V21Z"
                  fill="transparent"
                  id="fill1"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  fill="transparent"
                  id="fill2"
                  r="2"
                />
                <path
                  d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <circle
                  cx="15.75"
                  cy="8.25"
                  id="stroke2"
                  r="2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-size-s t-avatar--circle"
  >
    <span>
      
      TD
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      <span
        class="custom-collapse-node"
      >
        +1
      </span>
      
    </span>
  </div>
  
  
</div>
`;
